[package]
name = "gofile_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
hex = { version = "0.4.3", features = ["serde"] }
mime = "0.3.17"
reqwest = { version = "0.11.18", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.59"
tokio = { version = "1.29.1", features = ["rt", "macros", "default", "rt-multi-thread", "fs"] }
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde"] }

[dev-dependencies]
mockito = "1.1.0"
