[package]
name = "gofile_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.28"
hex = { version = "0.4.3", features = ["serde"] }
indicatif = "0.17.8"
mime = "0.3.17"
reqwest = { version = "0.11.18", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
strfmt = "0.2.4"
thiserror = "1.0.59"
tokio = { version = "1.29.1", features = ["rt", "macros", "default", "rt-multi-thread", "fs", "sync"] }
tokio-util = { version = "0.7.10", features = ["io"] }
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[dev-dependencies]
mockito = "1.1.0"
